# haskell-servant-pagination

./: .ghci  .gitignore  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  CHANGELOG.md  LICENSE  README.md  Setup.hs  servant-pagination.cabal  stack.yaml
examples/: Color.hs  Complex.hs  Simple.hs
src/Servant/: Pagination.hs
src/Servant/Pagination/: Internal.hs
test/Servant/: PaginationSpec.hs
